--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,7 +2,7 @@
 set(COMPONENT_REQUIRES )
 set(COMPONENT_PRIV_REQUIRES )
 
-set(COMPONENT_SRCS "main.c console.c")
+set(COMPONENT_SRCS "main.c console.c wifi.c")
 set(COMPONENT_ADD_INCLUDEDIRS "")
 
 register_component()
