--- a/components/readline/CMakeLists.txt
+++ b/components/readline/CMakeLists.txt
@@ -1,8 +1,7 @@
 
-set(COMPONENT_REQUIRES )
 set(COMPONENT_PRIV_REQUIRES )
 
-set(COMPONENT_SRCS "wifiscan.c wificonnect.c")
+set(COMPONENT_SRCS "readline.c")
 set(COMPONENT_ADD_INCLUDEDIRS ".")
 
 register_component()
