Added LED control for wifi and activity.

--- a/components/led_control/CMakeLists.txt
+++ b/components/led_control/CMakeLists.txt
@@ -1,8 +1,8 @@
 
-set(COMPONENT_REQUIRES led_control)
+set(COMPONENT_REQUIRES )
 set(COMPONENT_PRIV_REQUIRES )
 
-set(COMPONENT_SRCS "motor_control.c")
+set(COMPONENT_SRCS "led_control.c")
 set(COMPONENT_ADD_INCLUDEDIRS ".")
 
 register_component()
