--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-set(COMPONENT_REQUIRES motor_control udpcomm wifi readline)
+set(COMPONENT_REQUIRES motor_control udpcomm wifi readline led_control)
 set(COMPONENT_PRIV_REQUIRES nvs_flash)
 
 set(COMPONENT_SRCS "main.c")
