--- a/components/udpcomm/CMakeLists.txt
+++ b/components/udpcomm/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-set(COMPONENT_REQUIRES nanopb)
+set(COMPONENT_REQUIRES nanopb wifi led_control)
 set(COMPONENT_PRIV_REQUIRES )
 
 set(COMPONENT_SRCS "udpserver.c proto/RobotSystemCommunication.pb.c")
